<resources>
    <string name="app_name">Car Wash</string>
    <string name="create_account">create account</string>
    <string name="full_name">Full Name</string>
    <string name="address">Enter Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="contact">Contact Number</string>
    <string name="email">Email</string>
    <string name="join">Join</string>
    <string name="login">login</string>
    <string name="btn_login">Log in</string>
    <string name="already_member">Already Member</string>
    <string name="new_member">New To Carwash</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="user_name">Ram Mandal</string>
    <string name="user_contact">+977-9808065961</string>

    <string name="my_google_api_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAp84KAuNDyBeb0QIklmV9UMQ6Zc1xEhhg</string>
    <string name="car_no">No 13</string>
    <string name="car_washer">Mohammad Alsead</string>
    <string name="car_washer_address">Saudi Arab</string>
    <string name="duration">0.8 KM</string>
    <string name="time_to_reach">Time to reach 10</string>
    <string name="time_to_reach_location">Hakim lbn Harith, Al Mohammadiyah, Riyadh</string>
    <string name="show_more">Show more</string>
    <string name="close">Close</string>
    <string name="estimation_time">Estimation time 10</string>
    <string name="car_washer_contact">05399967983</string>
    <string name="car_type">Car Type</string>
    <string name="washer_address">Address</string>
    <string name="payment_method">Payment method</string>
    <string name="credit_card">Credit</string>
    <string name="payment_monthly">Monthly Payments</string>
    <string name="payment_coupon">Coupon</string>
    <string name="cash_payment">Cash Payment</string>
    <string name="make_payment">make Payment</string>
    <string name="price">35SR</string>
    <string name="time">PM15:25 25/08/17</string>
    <string name="vehicle_type_s">Vehicle Type : %s</string>
    <string name="service_type_s">Service Type : %s</string>
    <string name="text">text</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update">Update</string>
    <string name="car_washer_item">Car washer</string>
    <string name="delivered">Delivered</string>
    <string name="station">Stations</string>
    <string name="service_type">Service Type</string>
    <string name="payed_amount">Payed Amount : %s</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="customer_name">MR. Ram Mandal</string>
    <string name="accept_order">Accept order</string>
    <string name="ignore_order">Ignore order</string>
    <string name="view_detail">View Detail</string>
    <string name="complete_order">Change to Compelete</string>
    <string name="choose_user_type">Choose user type</string>
    <string name="customer">Customer</string>
    <string name="client">Client</string>
</resources>
