<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_layout" />

    <com.ronem.carwash.view.ChosenTextView
        style="@style/head_title"
        android:text="@string/edit_profile"
        android:textColor="@color/color_login" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp">


            <EditText
                android:id="@+id/edt_full_name"
                style="@style/edit_text_style.EDIT"
                android:drawableLeft="@mipmap/ic_person_black_24dp"
                android:hint="@string/full_name" />

            <EditText
                android:id="@+id/edt_email"
                style="@style/edit_text_style.EDIT"
                android:drawableLeft="@mipmap/ic_mail_outline_black_24dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />


            <EditText
                android:id="@+id/edt_contact"
                style="@style/edit_text_style.EDIT"
                android:drawableLeft="@mipmap/ic_stay_current_portrait_black_24dp"
                android:hint="@string/contact" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/white_bg_grey_stroke"
                android:orientation="horizontal"
                android:paddingRight="1dp"
                android:paddingTop="1dp"
                android:paddingBottom="1dp"
                android:paddingLeft="@dimen/_12sdp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@mipmap/ic_directions_car_white_24dp"
                    android:tint="@color/color_login" />

                <Spinner
                    android:id="@+id/create_account_spinner_car_type"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:background="@color/color_white" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_update_profile"
                style="@style/event_button.CreateAccount"
                android:text="@string/update" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>