<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_5sdp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/up_corner_bg"
        android:padding="@dimen/_5sdp">

        <com.ronem.carwash.view.CircleImageView
            android:id="@+id/car_washer_pic"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:padding="@dimen/_2sdp"
            android:src="@drawable/pic" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/car_washer_pic"
            android:orientation="vertical">

            <TextView
                android:id="@+id/car_no"
                style="@style/dialog_title_text"
                android:drawableLeft="@mipmap/ic_directions_car_white_24dp"
                android:drawablePadding="@dimen/_5sdp"
                android:text="@string/car_no" />

            <TextView
                android:id="@+id/car_washer"
                style="@style/dialog_title_text"
                android:drawableLeft="@mipmap/ic_account_circle_white_24dp"
                android:drawablePadding="@dimen/_5sdp"
                android:text="@string/car_washer" />
        </LinearLayout>

        <TextView
            android:id="@+id/car_washer_address"
            style="@style/dialog_title_text"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/car_washer_address" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp">

        <com.ronem.carwash.view.ChosenTextView
            android:id="@+id/distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration"
            android:textColor="@color/color_orange"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/access_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:src="@mipmap/ic_access_time_black_24dp"
            android:tint="@color/color_orange" />
    </RelativeLayout>
</LinearLayout>