<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/form_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/_15sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            android:background="@drawable/transparent_bg_with_stroke"
            android:orientation="vertical"
            android:padding="@dimen/_15sdp">

            <Button
                android:id="@+id/btn_user_type_customer"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_height="wrap_content"
                android:background="@drawable/login_selector"
                android:text="@string/customer"
                android:textColor="@color/color_white" />
            <Button
                android:id="@+id/btn_user_type_client"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_height="wrap_content"
                android:background="@drawable/login_selector"
                android:text="@string/client"
                android:textColor="@color/color_white" />


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/transparent"
            android:text="@string/choose_user_type"
            android:textColor="@color/color_white"
            android:textSize="@dimen/_13sdp" />
    </RelativeLayout>
</RelativeLayout>