<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="true"
    android:orientation="vertical"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/customer_name_service_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/customer_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer_name"
                android:textColor="@color/color_dark_grey"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/customer_service_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/customer_name"
                android:textColor="@color/color_dark_grey"
                android:textSize="@dimen/_14sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_accept_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/green_circle"
                android:padding="@dimen/_5sdp"
                android:text="@string/accept_order"
                android:textColor="@color/color_white"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/btn_ignore_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:background="@drawable/red_circle"
                android:padding="@dimen/_5sdp"
                android:text="@string/ignore_order"
                android:textColor="@color/color_white"
                android:textSize="@dimen/_10sdp" />


        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>