<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00000000"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:background="@color/color_white">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="55dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_directions_car_white_24dp"
                        android:tint="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/car_no"
                        style="@style/show_more_user"
                        android:text="@string/car_no" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_account_circle_white_24dp"
                        android:tint="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/car_washer_name"
                        style="@style/show_more_user"
                        android:text="@string/car_washer" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_call_white_24dp"
                        android:tint="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/car_washer_contact"
                        style="@style/show_more_user"
                        android:text="@string/car_washer_contact" />
                </LinearLayout>

                <RatingBar
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:numStars="5"
                    android:scaleX="0.5"
                    android:scaleY="0.5"
                    android:stepSize="1.0"
                    android:transformPivotX="0dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/show_more_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/duration"
                    android:textColor="@color/color_orange"
                    android:textSize="@dimen/_18sdp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:src="@mipmap/ic_access_time_black_24dp"
                    android:tint="@color/color_orange" />

                <TextView
                    android:id="@+id/show_more_estimation_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/estimation_time"
                    android:textColor="@color/color_orange"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <com.ronem.carwash.view.CircleImageView
        android:id="@+id/car_washer_pic"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginLeft="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:elevation="4dp"
        android:padding="2dp"
        android:src="@drawable/pic" />
</RelativeLayout>